--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
       media="screen and (max-width: 280px)"
       href="../css/phone-small2.css"
     />
+    <link
+      rel="stylesheet"
+      media="screen and (min-width: 768px)"
+      href="../css/tablets.css"
+    />
+    <link
+      rel="stylesheet"
+      media="screen and (min-width: 1024px)"
+      href="../css/bigScreen.css"
+    />
   </head>
   <body>
     <nav id="navbar">
@@ -49,29 +59,31 @@
     </section>
     <section id="services">
       <h1 class="h-primary center">Our Services</h1>
-      <div class="serviceItems">
-        <h2 class="h-secondary center">Food Catering</h2>
-        <img src="../images/general/img-1.jpg" alt="img-1" />
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum rerum
-          ea porro.
-        </p>
-      </div>
-      <div class="serviceItems">
-        <h2 class="h-secondary center">Bulk Catering</h2>
-        <img src="../images/general/img-2.jpg" alt="img-2" />
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum rerum
-          ea porro.
-        </p>
-      </div>
-      <div class="serviceItems">
-        <h2 class="h-secondary center">Food Ordering</h2>
-        <img src="../images/general/img-3.jpg" alt="img-3" />
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum rerum
-          ea porro.
-        </p>
+      <div id="services-cards">
+        <div class="serviceItems">
+          <h2 class="h-secondary center">Food Catering</h2>
+          <img src="../images/general/img-1.jpg" alt="img-1" />
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum
+            rerum ea porro.
+          </p>
+        </div>
+        <div class="serviceItems">
+          <h2 class="h-secondary center">Bulk Catering</h2>
+          <img src="../images/general/img-2.jpg" alt="img-2" />
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum
+            rerum ea porro.
+          </p>
+        </div>
+        <div class="serviceItems">
+          <h2 class="h-secondary center">Food Ordering</h2>
+          <img src="../images/general/img-3.jpg" alt="img-3" />
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum
+            rerum ea porro.
+          </p>
+        </div>
       </div>
     </section>
     <section id="clients">
